--- a/Aircraft_recommendation.ipynb
+++ b/Aircraft_recommendation.ipynb
@@ -356,17 +356,17 @@
     {
      "data": {
       "text/plain": [
-       "ANCHORAGE, AK                      434\n",
-       "MIAMI, FL                          200\n",
-       "ALBUQUERQUE, NM                    196\n",
-       "HOUSTON, TX                        193\n",
-       "CHICAGO, IL                        184\n",
-       "                                  ... \n",
-       "Walthourville, GA                    1\n",
-       "HERSHEY, NE                          1\n",
-       "Seoul, South Korea, South Korea      1\n",
-       "Cedar Lake, MI                       1\n",
-       "Kenmore, WA                          1\n",
+       "ANCHORAGE, AK         434\n",
+       "MIAMI, FL             200\n",
+       "ALBUQUERQUE, NM       196\n",
+       "HOUSTON, TX           193\n",
+       "CHICAGO, IL           184\n",
+       "                     ... \n",
+       "Reedsville, WI          1\n",
+       "Yesan, South Korea      1\n",
+       "Sinaloa, Mexico         1\n",
+       "Burlington, IA          1\n",
+       "Pastaza, Spain          1\n",
        "Name: Location, Length: 27758, dtype: int64"
       ]
      },
