Include presentation and dashboard in README

--- a/Aircraft_recommendation.ipynb
+++ b/Aircraft_recommendation.ipynb
@@ -3490,7 +3490,7 @@
     "\n",
     "- Shortlist aircraft models with proven declining accident trends. Use models like Cessna 182 or  as benchmark candidates for further cost-benefit analysis.\n",
     "\n",
-    "- Perform cost tradeoffs — cross-check insurance premiums, fuel efficiency, and maintenance costs for top safe models to determine which option balances safety and profitability.\n",
+    "- Perform cost tradeoffs, cross-check insurance premiums, fuel efficiency, and maintenance costs for top safe models to determine which option balances safety and profitability.\n",
     "\n",
     "- Investigate why certain flight purposes lead to higher risks. "
    ]
